--- a/new/index.html
+++ b/new/index.html
@@ -6,7 +6,7 @@
 	<title> Vaffanculooooo</title>
 </head>
 <body>
-<h1>VAFFANCULO</h1>
-<p>BELL'AFFFARE</p>
+<h1>Ce la posso fare</h1>
+<p>Sei un grane mattia</p>
 </body>
 </html>
